Fixed som of the overflow-problems that occured during testing

--- a/src/main.scss
+++ b/src/main.scss
@@ -248,9 +248,10 @@ $main-font: 'Roboto';
     margin: auto;
     display: flex;
     overflow-x: auto;
-    column-gap: 3rem;
+    overflow: hidden;
+    column-gap: 3.5rem;
     height: fit-content;
-    padding: 2.6rem 0 7rem;
+    padding: 2.5rem 0 7rem;
     // @include breakpoint($medium-screen) {}
     @include breakpoint($large-screen) {
         column-gap: 1rem;
@@ -329,6 +330,7 @@ $main-font: 'Roboto';
     margin-left: 1.5rem;
     display: flex;
     overflow-x: auto;
+    overflow: hidden;
     column-gap: 2rem;
     // @include breakpoint($medium-screen) {}
     @include breakpoint($large-screen) {
